# PineScope

./: CMakeLists.txt  PineScope.desktop  PineScope.pro  README.md  main.c  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pine.cmake  resources.qrc
cmake-build/: CMakeCache.txt  cmake_install.cmake
cmake-build/QCustomPlot_autogen/: moc_predefs.h
gui/: mainwindow.cpp  mainwindow.h  resources.qrc
